remove new beer form from beers#index

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,103 +4,22 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
-		<!-- need to figure how how the data is transmitted when you submit the form -->
-		<!-- need to keep this as a form otherwise the filters don't work -->
 		<%= form_tag(beers_path, method: "get", id: "beerFilter") do %>
 		<%= render partial: 'application/category_filter', locals: {categories: @categories} %>
 		<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
-			<!-- <div>
-				<%= submit_tag "Apply Filter", id: "applyFilter" %>
-			</div> -->
-		<% end %>
-
-		<div class="table-wrapper">
-	    <table>
-	      <thead>
-	        <tr>
-	          <th>Brewery</th>
-	          <th>Name</th>
-	          <th>Abv</th>
-	        </tr>
-	      </thead>
-	      <tbody>
-	      </tbody>
-	    </table>
-	  </div>
-	</div>
-
-	<div class="6u 12u$(medium)">
-		<h4>Add New Beer</h4>
-
-		<%= form_for @beer do |f|%>
-		<div class="row uniform">
-			<div class="12u$">
-				<fieldset class="box">
-			    <legend class="section-title">Brewery</legend>
-			    <!-- text field with auto complete, also drop down menu -->
-			    <%= f.fields_for :brewery do |b| %>
-			      <%= b.label "Name*" %>
-			      <%= b.text_field :name, list: "breweries_autocomplete", required: true %>
-			      <datalist id="breweries_autocomplete">
-			        <% Brewery.alpha_sorted.each do |brewery| %>
-			          <option value="<%= brewery.name %>">
-			        <% end %>
-			      </datalist> <br />
-			      <!-- ideally want location to autopopulate if user chooses existing brewery bc right now it updates the brewery location-->
-			      <%= b.label :location %>
-			      <%= b.text_field :location %>
-			    <% end %>
-			  </fieldset>
-			</div>
-
-			<div class="12u$">
-		  <fieldset class="box">
-		    <legend class="section-title">Beer</legend>
-		    <%= f.label "Name*" %>
-		    <%= f.text_field :name, list: "beers_autocomplete", required: true %>
-		    <datalist id="beers_autocomplete">
-		      <% Beer.alpha_sorted.each do |beer| %>
-		        <option value="<%= beer.name %>">
-		      <% end %>
-		    </datalist> <br />
-
-		    <%= f.fields_for :category do |c| %>
-		      <%= c.label "Type*" %>
-		      <%= c.text_field :name, list: "categories_autocomplete", required: true %>
-		      <datalist id="categories_autocomplete">
-		        <% Category.alpha_sorted.each do |category| %>
-		          <option value="<%= category.name %>">
-		        <% end %>
-		      </datalist> <br />
-		    <% end %>
-
-		    <%= f.label "ABV* (%)"%>
-		    <%= f.text_field :abv %> <br />
-
-		    <%= f.label :description %>
-		    <%= f.text_area :description %> <br />
-			</div>
-
-			<!-- <div class="6u 12u$(xsmall)">
-				<%= f.label :name %>
-				<%= f.text_field :name %>
-			</div>
-
-			<div class="6u 12u$(xsmall)">
-				<%= f.label :abv %>
-				<%= f.text_field :abv %>
-			</div>
-
-			<div class="12u$">
-				<%= f.label :description %>
-				<%= f.text_area :description %>
-			</div> -->
-
-			<div class="6u 12u$(xsmall)">
-		  	<%= f.submit "Add Beer" %>
-			</div>
-		</div>
 		<% end %>
 	</div>
-
+	<div class=" 6u 12$(medium) table-wrapper">
+    <table>
+      <thead>
+        <tr>
+          <th>Brewery</th>
+          <th>Name</th>
+          <th>Abv</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
 </div>
