--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,6 @@
 <header class="align-center">
 	<h2>Breweries</h2>
+	<a href="#" id="addBrewery">Add New Brewery</a>
 </header>
 
 <div class="center">
@@ -16,7 +17,6 @@
 	</table>
 
 	<div class="3u$ 12u$(small)">
-		<button type="button" id="addBrewery" class="fit icon fas fa-plus">Brewery</button>
+		<button type="button" id="addBrewery" class="small icon fas 	fa-plus">Brewery</button>
 	</div>
-
 </div>
