add brewery description to breweries#index page

--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,6 +1,5 @@
 <header class="align-center">
 	<h2>Breweries</h2>
-	<a href="#" id="addBrewery">Add New Brewery</a>
 </header>
 
 <div class="center">
@@ -10,6 +9,7 @@
 			<tr>
 				<th>Brewery</th>
 				<th>Location</th>
+				<th>Description</th>
 			</tr>
 		</thead>
 		<tbody>
