have new brewery form appear after pressing button at the bottom of list

--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -16,7 +16,11 @@
 		</tbody>
 	</table>
 
-	<div class="3u$ 12u$(small)">
+	<div id="addBrewery" class="3u$ 12u$(small)">
 		<button type="button" id="addBrewery" class="small icon fas 	fa-plus">Brewery</button>
+	</div>
+
+	<div id="addBreweryForm">
+		
 	</div>
 </div>
