comment out brewery description fields

--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -9,7 +9,7 @@
 			<tr>
 				<th>Brewery</th>
 				<th>Location</th>
-				<th>Description</th>
+				<!-- <th>Description</th> -->
 			</tr>
 		</thead>
 		<tbody>
@@ -21,6 +21,6 @@
 	</div>
 
 	<div id="addBreweryForm">
-		
+
 	</div>
 </div>
