return status 400 if @brewery.save is false. add field to display errors on Breweries#Index

--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -20,6 +20,10 @@
 		<button type="button" id="addBrewery" class="small icon fas 	fa-plus">Brewery</button>
 	</div> -->
 	<%= form_for @brewery do |f| %>
+
+		<div class="box" id="error_explanation">
+		</div>
+
 		<div class="row uniform">
 			<div class="6u 12u$(xsmall)">
 				<%= f.label :name %>
