--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2958,7 +2958,7 @@ z-index: 10010;
 
 #banner {
 padding: 8em 0 9em 0;
-background-image: url("https://images.pexels.com/photos/597461/pexels-photo-597461.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
+/*background-image: url(<%= asset_path('beer_taps.jpeg') %>)*/
 background-size: cover;
 background-position: bottom;
 background-attachment: fixed;
